# glucose

./: .clang-format  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  clean.sh  glucose.sh
core/: CCANR.cc  CCANR.h  ClauseManager.cc  ClauseManager.h  Dimacs.h  Restart.cc  Restart.h  Solver.cc  Solver.h  SolverTypes.h  TargetPhase.h  TrailSaving.h  lcm.cc
mtl/: Alg.h  Alloc.h  Heap.h  IntTypes.h  Map.h  Queue.h  Sort.h  Vec.h  VecIterator.h  XAlloc.h  template.mk
parallel/: Main.cc  ParallelSolver.cc  ParallelSolver.h
simp/: Main.cc  Makefile  SimpSolver.cc  SimpSolver.h
sources/SatElite/ForMani/ADTs/: File.or  depend.mak
sources/SatElite/ForMani/Global/: Global.or  depend.mak
sources/glucose/core/: Main.C  Makefile  Solver.C  Solver.cc  Solver.h  SolverTypes.h  depend.mk
sources/glucose/mtl/: Heap.h  Vec.h  template.mk
sources/glucose/utils/: System.cc
utils/: Options.cc  Options.h  ParseUtils.h  Random.h  System.cc  System.h  Verbose.h
